--- a/jovenes.html
+++ b/jovenes.html
@@ -141,7 +141,7 @@
                 </div>
                 <video id="my-video3" class="video-js vjs-default-skin" controls preload="auto" width="640" height="360"
                     poster="./img/Poster.webp">
-                    <source src="https://remax.b-cdn.net/VSL2.mp4" type="video/mp4">
+                    <source src="https://remax.b-cdn.net/VSL 2- PERFIL PROFESIONAL COMPRIOMI.mp4" type="video/mp4">
                     Tu navegador no soporta videos en HTML5.
                 </video>
                 <a href="#formCRM" class="postulateBtn5">Sumate a nuestro equipo »</a>
@@ -432,7 +432,7 @@
                 </p>
                 <video id="my-videoMobile" class="video-js vjs-default-skin" controls preload="metadata" width="640"
                     height="360" poster="./img/Poster.webp">
-                    <source src="https://remax.b-cdn.net/VSL2.mp4" type="video/mp4">
+                    <source src="https://remax.b-cdn.net/VSL 2- PERFIL PROFESIONAL COMPRIOMI.mp4" type="video/mp4">
                     Tu navegador no soporta videos en HTML5.
                 </video>
                 <a href="#formCRM" class="sumateBtnMobile">Sumate a nuestro equipo <img src="./img/fast_forward.svg"
