--- a/jovenes.html
+++ b/jovenes.html
@@ -140,7 +140,7 @@
                     </p>
                 </div>
                 <video id="my-video3" class="video-js vjs-default-skin" controls preload="auto" width="640" height="360"
-                    poster="./img/Poster.webp">
+                    poster="./img/Poster2.webp">
                     <source src="https://remax.b-cdn.net/VSL 2- PERFIL PROFESIONAL COMPRIOMI.mp4" type="video/mp4">
                     Tu navegador no soporta videos en HTML5.
                 </video>
@@ -159,7 +159,7 @@
                         <span style="font-weight: 550;">DÓLARES</span>.
                         , proporcionales al trabajo que hiciste. Acá tu talento y tu red valen, y los resultados
                         se notan. Porque si vas a salir del sistema, que sea para ganar mejor.
-                    </p>
+                    </p>ñ
                 </div>
                 <div class="ofrecemosDiv2">
                     <p class="ofrecemosText ofrecemosText32">Sabemos que venís de un modelo donde te exigían mucho… pero
@@ -431,7 +431,7 @@
                 <p class="mujeresMobile">Sumate a nuestro equipo y <br> <strong>mudate a la vida que querés</strong>
                 </p>
                 <video id="my-videoMobile" class="video-js vjs-default-skin" controls preload="metadata" width="640"
-                    height="360" poster="./img/Poster.webp">
+                    height="360" poster="./img/Poster2.webp">
                     <source src="https://remax.b-cdn.net/VSL 2- PERFIL PROFESIONAL COMPRIOMI.mp4" type="video/mp4">
                     Tu navegador no soporta videos en HTML5.
                 </video>
