--- a/jovenes.html
+++ b/jovenes.html
@@ -153,7 +153,7 @@
                 <img class="ofrecemosLine" src="./img/line2.svg" alt="linea de separacion">
                 <h2 class="ofrecemosTitle">¿Qué te ofrecemos?</h2>
                 <div class="ofrecemosDiv1">
-                    <img class="ofrecemosImg" src="./img/jovenesOfrecemos.webp" alt="">
+                    <img class="ofrecemosImg" src="./img/desktop-jovenesOfrecemos.webp" alt="">
                     <p class="ofrecemosText">Tu tiempo y esfuerzo tienen valor real. En RE/MAX CORDIAL no hay sueldos
                         fijos que te limiten, ni techos impuestos: cada operación que cerrás se traduce en comisiones en
                         <span style="font-weight: 550;">DÓLARES</span>.
@@ -169,10 +169,10 @@
                         pero con foco. Porque el verdadero profesional no necesita que lo controlen: necesita que lo
                         liberen.
                     </p>
-                    <img class="ofrecemosImg" src="./img/jovenesOfrecemos2.webp" alt="">
+                    <img class="ofrecemosImg" src="./img/desktop-jovenesOfrecemos2.webp" alt="">
                 </div>
                 <div class="ofrecemosDiv3">
-                    <img class="ofrecemosImg" src="./img/jovenesOfrecemos3.webp" alt="">
+                    <img class="ofrecemosImg" src="./img/desktop-jovenesOfrecemos3.webp" alt="">
                     <p class="ofrecemosText">Estás listo para algo más. Lo sabés. Por eso en RE/MAX CORDIAL no venís a
                         “ver qué sale”, venís a construir. Acá vas a capacitarte todo el tiempo, aprender de referentes
                         del sector, desarrollar habilidades reales de negocio y trabajar junto a personas que también
