--- a/jovenes.html
+++ b/jovenes.html
@@ -132,11 +132,11 @@
 
             <div class="videoSection">
                 <div class="videoMujeresDiv">
-                    <p class="videoMujeresText">Solo para <span class="videoMujeresSpan">jóvenes profesionales</span>
+                    <p class="videoMujeresText">Solo para <span class="videoMujeresSpan">profesionales que aspiran a más.</span>
                     </p>
                     <h3 class="sectionMujer">Comenzá tu propio negocio en RE/MAX CORDIAL</h3>
                     <p class="videoMujeresText"><span class="videoMujeresSpan">Sumate</span> a nuestro equipo y <span
-                            class="videoMujeresSpan">mudate a la vida que querés</span>
+                            class="videoMujeresSpan">obtené el éxito que te merecés por tu esfuerzo.</span>
                     </p>
                 </div>
                 <video id="my-video3" class="video-js vjs-default-skin" controls preload="auto" width="640" height="360"
@@ -426,9 +426,9 @@
         </section>
         <section>
             <div class="videoSectionMobile">
-                <p class="mujeresMobile">Solo para <strong>jóvenes profesionales</strong> </p>
+                <p class="mujeresMobile">Solo para <strong>profesionales</strong> que aspiran a más.</p>
                 <h3 class="mujeresMobileTitle">Comenzá tu propio negocio en RE/MAX CORDIAL</h3>
-                <p class="mujeresMobile">Sumate a nuestro equipo y <br> <strong>mudate a la vida que querés</strong>
+                <p class="mujeresMobile">Sumate a nuestro equipo y <br> <strong>obtené el éxito que te merecés por tu esfuerzo.</strong>
                 </p>
                 <video id="my-videoMobile" class="video-js vjs-default-skin" controls preload="metadata" width="640"
                     height="360" poster="./img/Poster2.webp">
