--- a/jovenes.html
+++ b/jovenes.html
@@ -122,7 +122,7 @@
 
             <div class="bannerContent">
                 <div>
-                    <h1 class="sumateTxt">Comenzá tu primer<br>negocio en<br><strong>RE/MAX CORDIAL</strong></h1>
+                    <h1 class="sumateTxt">DESARROLLÁ TU NEGOCIO <br>EN <strong>RE/MAX CORDIAL</strong></h1>
                 </div>
                 <a href="#formCRM" class="postulateBtn">POSTULATE AHORA</a>
             </div>
@@ -418,7 +418,7 @@
 
                 <div class="bannerContentMobile">
                     <div>
-                        <h1 class="sumateTxtMobile">Comenzá tu primer<br>negocio en<br><strong>RE/MAX CORDIAL</strong></h1>
+                        <h1 class="sumateTxtMobile">Comenzá tu negocio en<br><strong>RE/MAX CORDIAL</strong></h1>
                     </div>
                     <a href="#formCRM" class="postulateBtnMobile">POSTULATE AHORA</a>
                 </div>
