--- a/jovenes.html
+++ b/jovenes.html
@@ -99,7 +99,7 @@
             <img class="vectorMenuWhite" src="./img/VectorMenu.svg" alt="">
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
-                <a class="nav-link" href="./segunda.html">POR QUÉ RE/MAX CORDIAL</a>
+                <a class="nav-link" href="./segundajovenes.html">POR QUÉ RE/MAX CORDIAL</a>
             </div>
             <div class="divMenuRedes">
                 <a href="mailto:cordial@remax.com.ar" target="_blank"><img src="./img/redes1.svg" alt=""></a>
@@ -109,7 +109,7 @@
                 <a href="https://www.instagram.com/remaxcordial.arg/" target="_blank"><img src="./img/redes4.svg"
                         alt=""></a>
             </div>
-            <a href="#formCRM" class="postulateBtnMenu">POSTULATE AHORA</a>
+            <a href="#formCRM2" class="postulateBtnMenu">POSTULATE AHORA</a>
         </div>
     </div>
 
@@ -124,7 +124,7 @@
                 <div>
                     <h1 class="sumateTxt">DESARROLLÁ TU NEGOCIO <br>EN <strong>RE/MAX CORDIAL</strong></h1>
                 </div>
-                <a href="#formCRM" class="postulateBtn">POSTULATE AHORA</a>
+                <a href="#formCRM2" class="postulateBtn">POSTULATE AHORA</a>
             </div>
         </section>
         <section style="position: relative;">
@@ -132,7 +132,8 @@
 
             <div class="videoSection">
                 <div class="videoMujeresDiv">
-                    <p class="videoMujeresText">Solo para <span class="videoMujeresSpan">profesionales que aspiran a más.</span>
+                    <p class="videoMujeresText">Solo para <span class="videoMujeresSpan">profesionales que aspiran a
+                            más.</span>
                     </p>
                     <h3 class="sectionMujer">Comenzá tu propio negocio en RE/MAX CORDIAL</h3>
                     <p class="videoMujeresText"><span class="videoMujeresSpan">Sumate</span> a nuestro equipo y <span
@@ -141,10 +142,10 @@
                 </div>
                 <video id="my-video3" class="video-js vjs-default-skin" controls preload="auto" width="640" height="360"
                     poster="./img/Poster2.webp">
-                    <source src="https://remax.b-cdn.net/VSL 2- PERFIL PROFESIONAL COMPRIOMI.mp4" type="video/mp4">
+                    <source src="https://remax.b-cdn.net/VSLbCompress.mp4" type="video/mp4">
                     Tu navegador no soporta videos en HTML5.
                 </video>
-                <a href="#formCRM" class="postulateBtn5">Sumate a nuestro equipo »</a>
+                <a href="#formCRM2" class="postulateBtn5">Sumate a nuestro equipo »</a>
             </div>
 
         </section>
@@ -353,7 +354,7 @@
                     </div>
                 </div>
 
-                <a href="#formCRM" class="conoceBtn">SUMATE A NUESTRO EQUIPO</a>
+                <a href="#formCRM2" class="conoceBtn">SUMATE A NUESTRO EQUIPO</a>
             </section>
 
             <section class="porqueSection">
@@ -378,7 +379,7 @@
                             de éxito en nuestro equipo.
                         </p>
 
-                        <a href="#formCRM" class="postulateBtn33">POSTULATE AHORA »</a>
+                        <a href="#formCRM2" class="postulateBtn33">POSTULATE AHORA »</a>
                     </div>
                 </div>
             </section>
@@ -392,7 +393,7 @@
                         <img class="postulateLine" src="./img/line3.svg" alt="linea de separación">
                         <p class="postulateChildText">¿Querés sumarte a la inmobiliaria más productiva de Santa Fe
                             junto a los gestores comerciales mas exitosos del mercado?</p>
-                        <button class="postulateBtn2">POSTULATE AHORA</button>
+                        <a href="#formCRM2" style="text-decoration: none;"><button class="postulateBtn2">POSTULATE AHORA</button></a>
                     </div>
                 </div>
             </section>
@@ -420,7 +421,7 @@
                     <div>
                         <h1 class="sumateTxtMobile">Comenzá tu negocio en<br><strong>RE/MAX CORDIAL</strong></h1>
                     </div>
-                    <a href="#formCRM" class="postulateBtnMobile">POSTULATE AHORA</a>
+                    <a href="#formCRM2" class="postulateBtnMobile">POSTULATE AHORA</a>
                 </div>
             </div>
         </section>
@@ -428,14 +429,15 @@
             <div class="videoSectionMobile">
                 <p class="mujeresMobile">Solo para <strong>profesionales</strong> que aspiran a más.</p>
                 <h3 class="mujeresMobileTitle">Comenzá tu propio negocio en RE/MAX CORDIAL</h3>
-                <p class="mujeresMobile">Sumate a nuestro equipo y <br> <strong>obtené el éxito que te merecés por tu esfuerzo.</strong>
+                <p class="mujeresMobile">Sumate a nuestro equipo y <br> <strong>obtené el éxito que te merecés por tu
+                        esfuerzo.</strong>
                 </p>
                 <video id="my-videoMobile" class="video-js vjs-default-skin" controls preload="metadata" width="640"
                     height="360" poster="./img/Poster2.webp">
-                    <source src="https://remax.b-cdn.net/VSL 2- PERFIL PROFESIONAL COMPRIOMI.mp4" type="video/mp4">
+                    <source src="https://remax.b-cdn.net/VSLbCompress.mp4" type="video/mp4">
                     Tu navegador no soporta videos en HTML5.
                 </video>
-                <a href="#formCRM" class="sumateBtnMobile">Sumate a nuestro equipo <img src="./img/fast_forward.svg"
+                <a href="#formCRM2" class="sumateBtnMobile">Sumate a nuestro equipo <img src="./img/fast_forward.svg"
                         alt="fast froward"> </a>
             </div>
         </section>
@@ -591,7 +593,7 @@
                         negocio, desarrollarte como profesional y alcanzar una vida más libre. En Cordial creemos en el
                         win-win: cuando cada persona crece, el equipo también lo hace. Acá se viene a emprender, pero
                         sobre todo, a transformar tu vida.</P>
-                    <a href="#formCRM" class="azulMobileBtn">Sumate a nuestro equipo <img class="fastFwMobile"
+                    <a href="#formCRM2" class="azulMobileBtn">Sumate a nuestro equipo <img class="fastFwMobile"
                             src="./img/fast_forward.svg" alt=""> </a>
                 </div>
             </div>
@@ -621,7 +623,7 @@
                         src="./img/remax logo.png" alt="logo globo remax">
                 </div>
             </div>
-            <a class="sumateGlobo" href="#formCRM">SUMATE A NUESTRO EQUIPO</a>
+            <a class="sumateGlobo" href="#formCRM2">SUMATE A NUESTRO EQUIPO</a>
         </section>
 
     </div>
@@ -634,15 +636,14 @@
             molestiae, delectus laudantium sed tempore.</p>
     </section> -->
 
-    <section class="sectionFormMobile" id="formCRM">
-        <iframe src="https://api.leadconnectorhq.com/widget/form/TVzXwqMO4faeZ1pU4DP4"
-            style="width:100%;height:100%;border:none;border-radius:3px" class="formularioMobile"
-            id="inline-TVzXwqMO4faeZ1pU4DP4" data-layout="{'id':'INLINE'}" data-trigger-type="alwaysShow"
-            data-trigger-value="" data-activation-type="alwaysActivated" data-activation-value=""
-            data-deactivation-type="neverDeactivate" data-deactivation-value=""
-            data-form-name="Mujer burnout - Remax Cordial" data-height="1091"
-            data-layout-iframe-id="inline-TVzXwqMO4faeZ1pU4DP4" data-form-id="TVzXwqMO4faeZ1pU4DP4"
-            title="Mujer burnout - Remax Cordial">
+    <section class="sectionFormMobile" id="formCRM2">
+        <iframe src="https://api.leadconnectorhq.com/widget/form/mmg9myu4CNm4ZR6nTDXT"
+            style="width:100%;height:100%;border:none;border-radius:3px" id="inline-mmg9myu4CNm4ZR6nTDXT"
+            data-layout="{'id':'INLINE'}" data-trigger-type="alwaysShow" data-trigger-value=""
+            data-activation-type="alwaysActivated" data-activation-value="" data-deactivation-type="neverDeactivate"
+            data-deactivation-value="" data-form-name="perfil profesional - Remax Cordial " data-height="1905"
+            data-layout-iframe-id="inline-mmg9myu4CNm4ZR6nTDXT" data-form-id="mmg9myu4CNm4ZR6nTDXT"
+            title="perfil profesional - Remax Cordial ">
         </iframe>
     </section>
 
@@ -654,6 +655,7 @@
         </a>
     </footer>
 
+    <script src="https://link.msgsndr.com/js/form_embed.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
