--- a/jovenes.html
+++ b/jovenes.html
@@ -155,30 +155,26 @@
                 <h2 class="ofrecemosTitle">¿Qué te ofrecemos?</h2>
                 <div class="ofrecemosDiv1">
                     <img class="ofrecemosImg" src="./img/desktop-jovenesOfrecemos.webp" alt="">
-                    <p class="ofrecemosText">Tu tiempo y esfuerzo tienen valor real. En RE/MAX CORDIAL no hay sueldos
-                        fijos que te limiten, ni techos impuestos: cada operación que cerrás se traduce en comisiones en
-                        <span style="font-weight: 550;">DÓLARES</span>.
-                        , proporcionales al trabajo que hiciste. Acá tu talento y tu red valen, y los resultados
-                        se notan. Porque si vas a salir del sistema, que sea para ganar mejor.
-                    </p>ñ
+                    <p class="ofrecemosText">En RE/MAX CORDIAL, tu trabajo tiene valor real.
+                        Cada operación que cerrás se traduce en comisiones en <span
+                            style="font-weight: 550;">DÓLARES</span>
+                        , sin techo de ingresos, sin jefes, sin límites. Tu red, tu esfuerzo y tu talento definen lo que
+                        ganás. Si vas a salir del sistema, que sea para ganar mejor.
+                    </p>
                 </div>
                 <div class="ofrecemosDiv2">
-                    <p class="ofrecemosText ofrecemosText32">Sabemos que venís de un modelo donde te exigían mucho… pero
-                        no decidías nada. En nuestra oficina, vos marcás el ritmo. Tenés <span
-                            style="font-weight: 550;">LIBERTAD</span> para organizar tus
-                        días, tus reuniones y tu agenda como mejor se alinee a tus objetivos. Sin estructuras rígidas,
-                        pero con foco. Porque el verdadero profesional no necesita que lo controlen: necesita que lo
-                        liberen.
+                    <p class="ofrecemosText ofrecemosText32">En RE/MAX CORDIAL vos marcás el ritmo. Organizás tu agenda
+                        con <span style="font-weight: 550;">LIBERTAD</span>, sin estructuras rígidas ni jefes. Tu
+                        tiempo vale, y acá lo usás para lo que de verdad importa: cumplir tus objetivos, a tu manera.
                     </p>
                     <img class="ofrecemosImg" src="./img/desktop-jovenesOfrecemos2.webp" alt="">
                 </div>
                 <div class="ofrecemosDiv3">
                     <img class="ofrecemosImg" src="./img/desktop-jovenesOfrecemos3.webp" alt="">
-                    <p class="ofrecemosText">Estás listo para algo más. Lo sabés. Por eso en RE/MAX CORDIAL no venís a
-                        “ver qué sale”, venís a construir. Acá vas a capacitarte todo el tiempo, aprender de referentes
-                        del sector, desarrollar habilidades reales de negocio y trabajar junto a personas que también
-                        apuestan fuerte. Con acompañamiento constante y una marca que te respalda, <span
-                            style="font-weight: 550;">EL SALTO ES PROFESIONAL Y PERSONAL.</span>.
+                    <p class="ofrecemosText">Acá no venís a probar suerte: venís a construir en serio. Con capacitación
+                        constante, referentes del sector y un entorno que te eleva. Desarrollás habilidades reales y
+                        trabajás con gente que va por más. Porque el <span style="font-weight: 550;">SALTO ES
+                            PROFESIONAL Y PERSONAL.</span>.
                 </div>
             </div>
 
@@ -393,7 +389,8 @@
                         <img class="postulateLine" src="./img/line3.svg" alt="linea de separación">
                         <p class="postulateChildText">¿Querés sumarte a la inmobiliaria más productiva de Santa Fe
                             junto a los gestores comerciales mas exitosos del mercado?</p>
-                        <a href="#formCRM2" style="text-decoration: none;"><button class="postulateBtn2">POSTULATE AHORA</button></a>
+                        <a href="#formCRM2" style="text-decoration: none;"><button class="postulateBtn2">POSTULATE
+                                AHORA</button></a>
                     </div>
                 </div>
             </section>
@@ -446,27 +443,24 @@
             <div class="ofrecemosDivPadreMobile">
                 <div class="ofrecemosDivMobile">
                     <img class="ofrecemosMobileImg" src="./img/jovenesOfrecemos.webp" alt="remax agente comercial">
-                    <p class="ofrecemosTextMobile">Tu tiempo y esfuerzo tienen valor real. En RE/MAX CORDIAL no hay
-                        sueldos fijos que te limiten, ni techos impuestos: cada operación que cerrás se traduce en
-                        comisiones en <span style="font-weight: 550;">DÓLARES</span>, proporcionales al trabajo que
-                        hiciste. Acá tu talento y tu red valen, y los resultados se notan. Porque si vas a salir del
-                        sistema, que sea para ganar mejor.</p>
+                    <p class="ofrecemosTextMobile">En RE/MAX CORDIAL, tu trabajo tiene valor real.
+                        Cada operación que cerrás se traduce en comisiones en <span
+                            style="font-weight: 550;">DÓLARES</span>, sin techo de ingresos, sin jefes, sin límites. Tu
+                        red, tu esfuerzo y tu talento definen lo que ganás. Si vas a salir del sistema, que sea para
+                        ganar mejor.</p>
                 </div>
                 <div class="ofrecemosDivMobile">
                     <img class="ofrecemosMobileImg" src="./img/jovenesOfrecemos2.webp" alt="remax agente comercial">
-                    <p class="ofrecemosTextMobile">Sabemos que venís de un modelo donde te exigían mucho… pero no
-                        decidías nada. En nuestra oficina, vos marcás el ritmo. Tenés <span
-                            style="font-weight: 550;">LIBERTAD</span> para organizar tus días, tus reuniones y tu agenda
-                        como mejor se alinee a tus objetivos. Sin estructuras rígidas, pero con foco. Porque el
-                        verdadero profesional no necesita que lo controlen: necesita que lo liberen.</p>
+                    <p class="ofrecemosTextMobile">En RE/MAX CORDIAL vos marcás el ritmo. Organizás tu agenda con <span
+                            style="font-weight: 550;">LIBERTAD</span>, sin estructuras rígidas ni jefes. Tu tiempo vale,
+                        y acá lo usás para lo que de verdad importa: cumplir tus objetivos, a tu manera.</p>
                 </div>
                 <div class="ofrecemosDivMobile">
                     <img class="ofrecemosMobileImg2" src="./img/jovenesOfrecemos3.webp" alt="remax agente comercial">
-                    <p class="ofrecemosTextMobile">Estás listo para algo más. Lo sabés. Por eso en RE/MAX CORDIAL no
-                        venís a “ver qué sale”, venís a construir. Acá vas a capacitarte todo el tiempo, aprender de
-                        referentes del sector, desarrollar habilidades reales de negocio y trabajar junto a personas que
-                        también apuestan fuerte. Con acompañamiento constante y una marca que te respalda, <span
-                            style="font-weight: 550;">EL SALTO ES PROFESIONAL Y PERSONAL</span>.
+                    <p class="ofrecemosTextMobile">Acá no venís a probar suerte: venís a construir en serio. Con
+                        capacitación constante, referentes del sector y un entorno que te eleva. Desarrollás habilidades
+                        reales y trabajás con gente que va por más. Porque el <span style="font-weight: 550;">EL SALTO
+                            ES PROFESIONAL Y PERSONAL</span>.
                     </p>
                 </div>
                 <img class="middleLineMobile" src="./img/LineMiddleVector.svg" alt="">
