--- a/jovenes.html
+++ b/jovenes.html
@@ -516,7 +516,7 @@
         </section>
         <section>
             <h2 class="conoceMobileTitle">Conocé a quienes decidieron dar el paso y cambiar su realidad.</h2>
-            <div class="carousel-container">
+            <div class="carousel-container" style="margin: 0 10px;">
                 <a class="linkInstagramContacto" href="https://www.instagram.com/camilafyauck/" target="_blank">
                     <div class="carousel-card card cardLeoMobile">
                         <img class="imgCardLeoMobile camiMobile" src="./img/cami.webp" alt="">
